--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,16 @@
+blinker==1.9.0
 certifi==2024.12.14
 charset-normalizer==3.4.0
+click==8.1.8
 colorama==0.4.6
+Flask==3.1.0
 gpt4all==2.8.2
 idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.5
+MarkupSafe==3.0.2
+python-dotenv==1.0.1
 requests==2.32.3
 tqdm==4.67.1
 urllib3==2.2.3
+Werkzeug==3.1.3
