--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ click==8.1.8
 colorama==0.4.6
 diskcache==5.6.3
 Flask==3.1.0
+Flask-Cors==5.0.0
 gpt4all==2.8.2
+gunicorn==23.0.0
 idna==3.10
 iniconfig==2.0.0
 itsdangerous==2.2.0
@@ -15,6 +17,7 @@ MarkupSafe==3.0.2
 MouseInfo==0.1.3
 numpy==2.2.0
 packaging==24.2
+pika==1.3.2
 pluggy==1.5.0
 PyAutoGUI==0.9.54
 pycparser==2.22
@@ -24,7 +27,9 @@ pyperclip==1.9.0
 PyRect==0.2.0
 PyScreeze==1.0.1
 pytest==8.3.4
+python-dotenv==1.0.1
 pytweening==1.2.0
+pywin32==308
 requests==2.32.3
 setuptools==75.6.0
 tqdm==4.67.1
@@ -32,6 +37,3 @@ typing_extensions==4.12.2
 urllib3==2.2.3
 Werkzeug==3.1.3
 wheel==0.45.1
-python-dotenv
-gunicorn==20.1.0
-Flask-Cors
